sfdc-src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Language_Accuracy__c</fullName>
        <label>Language Accuracy (AWS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language (AWS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response (AWS)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <label>Sentiment (AWS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>